--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./server/index.js --exec babel-node",
-    "dev": "babel-watch server/server.js --ignore'./client'"
+    "dev": "nodemon ./server/index.js --exec babel-node --ignore './client",
+    "start": "babel-watch server/index.js"
   },
   "repository": {
     "type": "git",
